tests/templates/onpremises/04-cilium-kube-proxy-less/baseline/manifests/ingress/resources/ingress-infra.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    cluster.kfd.sighup.io/useful-link.enable: "true"
  annotations:
    cluster.kfd.sighup.io/useful-link.url: https://directory.internal.example.com
    cluster.kfd.sighup.io/useful-link.name: "Forecastle"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Forecastle"
    
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/Forecastle/master/assets/web/forecastle-round-100px.png"
    
    
    cert-manager.io/cluster-issuer: letsencrypt-fury
    

  name: forecastle
  
  namespace: forecastle
  
spec:
  ingressClassName: 
  rules:
    - host: directory.internal.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
          
            service:
              name: forecastle
              port:
                name: http
          
  tls:
    - hosts:
      - directory.internal.example.com
      secretName: directory-tls
